Todas as listas de um dev front, back, ux e ui design

--- a/Listas_gerais.html
+++ b/Listas_gerais.html
@@ -248,6 +248,8 @@ With this code I can trainne my brain, coding lists, trainne coding identing, Bo
 
                                 <a href=https://www.remote.co /> Remote co <br />
 
+                                <a href=https://www.FlexJobs.com /> FlexJobs <br />
+
                                 <a href=https://www.justremote.co/> justremote.co<br />
 
                                 <a href=https://www.pangian.com/> Pangian<br />
@@ -257,6 +259,8 @@ With this code I can trainne my brain, coding lists, trainne coding identing, Bo
                                 <a href=https://www.outsourcely.com /> outsourcely.com<br />
 
                                 <a href=https://www.angel.co/> Angel<br />
+
+                                <a href=https://www.angelList.co /> Angel List<br />
 
                                 <a href=https://www.upwork.com /> upwork.com<br />
 
